# gridly-bear

./: .coveragerc  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  AUTHORS.rst  LICENSE  README.md  package-lock.json  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
client/: package.json
client/src/: App.jsx
docs/: conf.py  index.rst  installation.rst  make.bat  usage.rst
flask_server/: .gitlab-ci.yml  app.py  pyproject.toml
flask_server/src/: app.py  jsonParser.py  net.py
flask_server/tests/: jsonParserTest.json  jsonParserTest.py  net_test.py
grid_modelling_gui/: .gitlab-ci.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml
grid_modelling_gui/docs/: Makefile  conf.py
grid_modelling_gui/tests/: __init__.py  test_grid_modelling_gui.py
project/: net.py
react-app/: firebase.json  jest.config.js  jest.polyfills.js  package-lock.json  package.json
react-app/.firebase/: hosting.YnVpbGQ.cache
react-app/functions/: .gitlab-ci.yml  basic-function.py  helloWorld.py  main.py  requirements.txt
react-app/functions/src/: apiHandler.py  (+2 more)
react-app/public/: index.html
react-app/src/: App.js  App.test.js  BusNode.js  CoreClasses.js  CustomNode.js  EventHandlers.js  LoadNode.js  LockButton.js  Search.js  Sidebar.js  SolarNode.js  TransformerNode.js  WindNode.js  api_interaction.js  customEdge.js  index.css  index.js  runButton.js  waitingOverlay.js
src/grid_modelling_gui/: grid_modelling_gui.py
src/main/: PandaPower.py
src/tests/: test_grid_modelling_gui.py
tests/: net_test.py  test_grid_modelling_gui.py
(+41 files in other folders)
