[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Alexandru <a.m.sologon@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask  = "^3.0.3"
pandapower = "^2.14.6"
numba = "^0.59.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
